--- a/content/resume.tex
+++ b/content/resume.tex
@@ -3,4 +3,4 @@
 L’optimisation des procédés de transformation agroalimentaire est un enjeu majeur pour améliorer la qualité, réduire les coûts et limiter le gaspillage. Dans ce contexte, la cuisson des haricots occupe une place centrale, leur temps de cuisson influençant directement la texture, la valeur nutritionnelle et l’acceptabilité du produit. Les méthodes traditionnelles d’estimation, bien que précises, sont chronophages, destructives et peu adaptées à un contrôle en ligne. Ce mémoire explore l’apport du Tiny Machine Learning (TinyML) comme solution innovante pour prédire, à partir d’images, le temps de cuisson des haricots de manière non destructive et adaptée aux environnements contraints. La méthodologie adoptée repose sur un pipeline hybride combinant classification et régression. Après la constitution de jeux de données spécifiques, plusieurs architectures de réseaux de neurones légers (CNN personnalisés, MobileNetV2, EfficientNet-B0, NASNetMobile) ont été évaluées et optimisées par quantification pour un déploiement embarqué. Les résultats obtenus montrent que le modèle CNN conçu sur mesure atteint un compromis satisfaisant entre précision, latence et consommation mémoire. Intégré dans une application Android, le système démontre la faisabilité d’une prédiction embarquée fiable et rapide du temps de cuisson. Au-delà de la contribution technique, ce travail illustre le potentiel du TinyML dans l’agroalimentaire et ouvre des perspectives pour le développement d’outils intelligents, accessibles et économes en énergie, favorisant un contrôle qualité amélioré et durable.
 
 \vspace{0.5cm}
-\noindent\textbf{Keywords:} TinyML, vision par ordinateur, réseaux de neurones légers, haricots, temps de cuisson.
+\noindent\textbf{Mots clés:} TinyML, vision par ordinateur, réseaux de neurones légers, haricots, temps de cuisson.
