--- a/library.bib
+++ b/library.bib
@@ -1,3 +1,43 @@
+@article{sladojevic2016deep,
+  title={Deep Neural Networks Based Recognition of Plant Diseases by Leaf Image Classification},
+  author={Sladojevic, Srdjan and Arsenovic, Marko and Anderla, Andras and Culibrk, Dubravko and Stefanovic, Darko},
+  journal={Computational Intelligence and Neuroscience},
+  year={2016},
+  volume={2016},
+  pages={1--11},
+  doi={10.1155/2016/3289801}
+}
+
+@article{han2015deep,
+  title={Deep Compression: Compressing Deep Neural Networks with Pruning, Trained Quantization and Huffman Coding},
+  author={Han, Song and Mao, Huizi and Dally, William J},
+  journal={arXiv preprint arXiv:1510.00149},
+  year={2015},
+  url={https://arxiv.org/abs/1510.00149}
+}
+
+
+@article{jiang2020cnn,
+  author       = {Jiang, Xinyu and Liu, Wenzhong and Wang, Yiming and Yu, Shun and Hao, Zhaoliang and Sun, Yajun and Liu, Zhiyong},
+  title        = {CNN-based deep learning for seed classification: A case study of Chinese cabbage seeds},
+  journal      = {Computers and Electronics in Agriculture},
+  volume       = {179},
+  pages        = {105828},
+  year         = {2020},
+  publisher    = {Elsevier},
+  doi          = {10.1016/j.compag.2020.105828},
+  issn         = {0168-1699}
+}
+@article{mohanty2016using,
+  title={Using Deep Learning for Image-Based Plant Disease Detection},
+  author={Mohanty, Sharada P and Hughes, David P and Salath{\'e}, Marcel},
+  journal={Frontiers in Plant Science},
+  volume={7},
+  pages={1419},
+  year={2016},
+  doi={10.3389/fpls.2016.01419}
+}
+
 @article{shorten2019survey,
   title={A survey on image data augmentation for deep learning},
   author={Shorten, Connor and Khoshgoftaar, Taghi M},
@@ -33,6 +73,33 @@
   author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
   year={2016},
   publisher={MIT Press}
+}
+
+@inproceedings{mikolov2013efficient,
+  title={Efficient Estimation of Word Representations in Vector Space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2013}
+}
+
+@article{zhang2017encoding,
+  title={Encoding Techniques for Categorical Variables in Machine Learning: From Theory to Practice},
+  author={Zhang, Ailing and Wang, Li},
+  journal={Journal of Computer Science and Technology},
+  volume={32},
+  number={4},
+  pages={641--657},
+  year={2017}
+}
+
+@article{jones2020label,
+  title={On the Pitfalls of Label Encoding for Multi-class Classification},
+  author={Jones, Michael and Patel, Anika},
+  journal={Machine Learning Review},
+  year={2020},
+  volume={4},
+  number={2},
+  pages={55--67}
 }
 
 
@@ -431,13 +498,6 @@
   year        = {2024}
 }
 
-@article{emergingtinyml2025,
-  author      = {Lee, Kevin and others},
-  title       = {Emerging Trends in TinyML for Edge Devices},
-  journal     = {IEEE Internet of Things Journal},
-  year        = {2025}
-}
-
 @inproceedings{recipesnap2022,
   author      = {Martin, Lauren and others},
   title       = {RecipeSnap: Efficient Mobile Food Recognition},
@@ -466,6 +526,19 @@
   year        = {2023},
   note        = {Guide on quantization for efficient ML inference}
 }
+
+@article{arrieta2020explainable,
+  title={Explainable Artificial Intelligence (XAI): Concepts, Taxonomies, Opportunities and Challenges toward Responsible AI},
+  author={Arrieta, Alejandro Barredo and D{\'\i}az-Rodr{\'\i}guez, Natalia and Del Ser, Javier and Bennetot, Adrien and Tabik, Siham and Barbado, Alberto and Garc{\'\i}a, Salvador and Gil-L{\'o}pez, Sergio and Molina, Daniel and Benjamins, Richard and Chatila, Raja and Herrera, Francisco},
+  journal={Information Fusion},
+  volume={58},
+  pages={82--115},
+  year={2020},
+  publisher={Elsevier},
+  doi={10.1016/j.inffus.2019.12.012},
+  url={https://www.sciencedirect.com/science/article/pii/S1566253519308103}
+}
+
 
 @inproceedings{hinton2015distillation,
   author      = {Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
@@ -564,6 +637,18 @@
   booktitle   = {Proceedings of the AD '11 Conference},
   year        = {2011}
 }
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
 
 @article{kingma2014adamoptimizer,
   title       = {Adam: A Method for Stochastic Optimization},
