--- a/main_thesis.tex
+++ b/main_thesis.tex
@@ -32,7 +32,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
-
+\input{content/abreviation.tex}
 
 \input{content/01-introduction} 
 \input{content/review} 			
